--- a/webpage/index.html
+++ b/webpage/index.html
@@ -9,31 +9,32 @@
 <body class="flat-bg">
 
 <header class="hero">
-    <h1>DataSphere</h1>
-    <p>Exploring science through clean, modern design</p>
+    <h1>Space Maps</h1>
+    <h2>Exploring space with data</h2>
+    <p>Making graphs from live astronomical data to understand space a little better. And because it's pretty.</p>
 </header>
 
 <main class="container">
     <section class="card-grid">
-        <a class="card" href="page1.html">
-            <h2>Galactic Overview</h2>
-            <p>Explore layered cosmic structures</p>
+        <a class="card" href="solarsignpost.html">
+            <h2>Solar Sign Post</h2>
+            <p>The direction and distance to all the other planets</p>
         </a>
 
-        <a class="card" href="page2.html">
+        <!-- <a class="card" href="page2.html">
             <h2>Deep Space Analysis</h2>
             <p>Flat‑style data visualizations</p>
-        </a>
+        </a> -->
 
-        <a class="card" href="page3.html">
+        <!-- <a class="card" href="page3.html">
             <h2>Quantum Streams</h2>
             <p>Minimalist scientific concepts</p>
-        </a>
+        </a> -->
 
-        <a class="card" href="page4.html">
+        <!-- <a class="card" href="page4.html">
             <h2>Cosmic Archive</h2>
             <p>Illustrated space imagery</p>
-        </a>
+        </a> -->
     </section>
 </main>
 
