--- a/webpage/solarsignpost.html
+++ b/webpage/solarsignpost.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solar Sign Post</title>
+    <title>SpaceMaps</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="flat-bg">
